Updated some files

--- a/index.css
+++ b/index.css
@@ -6,22 +6,26 @@
 }
 
 /* nav baar section */
-.navbar-brand{
-    text-shadow: 0 0  30px #1a21c9;
-    margin-left: 50px;
-     transition: 1s ;
-     
-      
+.container-fluid{
+    z-index: 9;
 }
 
+.navbar-brand{
+    text-shadow:#1a21c9 0 0  30px ;
+    margin-left: 50px;
+     transition: 1s ;
+      
+}
 
 .navbar-brand b:hover{
     color: #b00bba;
 }
+#navbarNav{
+    margin-right: 150px;
+    
+
+}
  
-#navbarNav ul{
-    margin-left: 700px;
-} 
 
 #navbarNav ul li{
     font-size: large;
@@ -29,6 +33,7 @@
 
 #navbarNav ul li a{
     color: white;
+    
 }
 
 
@@ -60,8 +65,7 @@
     height: 430px;
     border-radius: 0 150px 0 150px;
     transition: 1.5s;
-     animation: imageone 4s ease infinite ;
-
+    animation: imageone 4s ease infinite ;
 }
 
 .about-topic{
@@ -69,7 +73,7 @@
 }
 .about-topic h2 span{
     color: #1a21c9;
-     animation: title1 13s ease-in-out infinite ;
+     animation: title1 20s ease-in-out infinite ;
 
    
 }
@@ -82,11 +86,7 @@
         transform: translatey(); 
         color: #b00bba;
     }
-    100% {
-        transform: translatey();
-        color: #ff5f01;
     
-}
 }
 
 
@@ -132,6 +132,7 @@
 }
 .cv button:hover{
     border:3px solid #b00bba ;
+    box-shadow: #b00bba 0 0 20px;
 }
 
 /* about section */
@@ -215,10 +216,13 @@
     border: 4px solid #1a21c9;
     border-radius: 10px ;
     animation: project 2s ease-in infinite ;
+    box-shadow: #b00bba 0 0 20px;
+
 }
-.p-border2 button :hover{
-    color:   #b00bba;
+.p-border button :hover{
+    color:  #b00bba;
 }
+
 
 .image3 h3{
     margin-top: 30px;
@@ -238,6 +242,10 @@
     border-radius: 10px;
      animation: imageone 2s ease-in infinite ;
 }
+.image3 a button:hover{
+     box-shadow: #b00bba 0 0 10px;
+    border: #b00bba 5px solid;
+}
 
  
 .p-border2{
@@ -248,9 +256,12 @@
     border: 4px solid #1a21c9;
     border-radius: 10px ;
     animation: project2 2s ease infinite ;
+    box-shadow: #b00bba 0 0 20px;
+
 }
-.p-border button :hover{
-    color:  #b00bba;
+.p-border2 button :hover{
+    color:   #b00bba;
+   
 }
 
 
@@ -270,6 +281,10 @@
 .image4 a button span{
     color:  #b00bba;
 }
+.image4 a button:hover{
+     box-shadow: #b00bba 0 0 10px;
+    border: #b00bba 5px solid;
+}
 
 section{
     height: 100vh;
@@ -284,26 +299,55 @@ section{
     
 }
 
-
-@media (max-width: 576px ) {
+@media (max-width: 1000px ) {
     /* Navbar */
+    .nav-head{
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+    .container-fluid {
+         display: grid;
+        grid-template-columns: auto auto;
+        grid-column-gap:5px ;
+        height: auto;
+        padding-top: 10px; 
+        
+    }
      .navbar-brand {
         margin-left: 10px;
         font-size: 18px;
     }
+    #navbarNav {
+        /* border: #b00bba 3px solid; */
+        margin-top: 10px;
+        margin-right: 0px;
+    }
     #navbarNav ul {
-        margin-left: 0;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-column-gap: 15px;
         text-align: center;
     }
     #navbarNav ul li {
+        display:flex;
+       
         margin: 5px 0;
     } 
+    #navbarNav ul li a {
+        margin-left: 0px;
+        font-size: 15px;
+    }
+     
+} 
 
+
+@media (max-width: 576px ) {
+   
     /* Home Section */
     .about-section {
         flex-direction: column;
         text-align: center;
-        padding-top: 100px; /* avoid navbar overlap */
+        padding-top: 100px; 
     }
     .image img {
         width: 90%;
@@ -335,14 +379,15 @@ section{
     }
     .projrct .image3 {
         width: 90%;
+        max-width: none;
         height: auto;
         margin: 15px 0;
+    
     }
     .projrct .p-border2 {
-        width: 80%;
+        width: 90%;
         height: 250px;
         margin: 15px 0; 
-        margin-right: 5px;
     }
 
 
@@ -352,12 +397,6 @@ section{
         padding: 60px 20px;
     }
 
-    /* Navbar container fix */
-    .container-fluid {
-        position: relative;
-        height: auto;
-        padding-top: 10px;
-    }
     .contact {
         width: 90%;       
         height: auto;     
